# carbonbridge

./: .env.example  .gitignore  CLAUDE.md  DEVPOST.md  FE_plan.md  README.md  polytope.yml  polytope_tigerbeetle_bug_report.md  set_values_and_secrets.sample  spec.md
clients/: README.md
clients/python/: README.md  pyproject.toml
clients/python/clients/couchbase/: __init__.py  base_model.py  config.py  keyspace.py
clients/python/clients/http/: __init__.py
clients/python/clients/resonate/: __init__.py  client.py  exceptions.py
clients/python/clients/tigerbeetle/: __init__.py  client.py
clients/typescript/: package.json  tsconfig.json
models/: README.md
models/python/: README.md  pyproject.toml
models/python/models/entities/couchbase/: agent_runs.py  auctions.py  bids.py  listings.py  market_insights.py  offsets_db_projects.py  orders.py  registry_verifications.py  sync_logs.py  users.py  wizard_sessions.py
models/python/models/operations/: agent_runs.py  auctions.py  bids.py  listings.py  market_insights.py  offsets_db_projects.py  orders.py  registry_verifications.py  sync_logs.py  users.py  wizard_sessions.py
services/: polytope.yml
services/api/: polytope.yml  pyproject.toml
services/config-manager/: polytope.yml  requirements.txt
services/couchbase/: README.md  polytope.yml
services/curity/: config.xml  polytope.yml
services/kong/: kong.yml  polytope.yml
services/postgres/: polytope.yml  postgres.py
services/resonate/: polytope.yml
services/tigerbeetle/: polytope.yml
services/web-app/: README.md  package-lock.json  package.json  (+3 more)
(+734 files in other folders)
